# ev2400-on-raspberry-pi-pico

./: Cargo.toml  README.md  blackmagic-run.sh
.cargo/: config.toml
src/: commands.rs  descriptors.rs  errors.rs  indications.rs  main.rs  parser.rs  ti.rs  usb.rs
tools/: blackmagic-flash.gdb  blackmagic-runner.sh
